--- a/.example.env
+++ b/.example.env
@@ -1,2 +1,3 @@
 GEMINI_API_KEY="your_api_key_here"
 GEMINI_MODEL="gemini-2.5-flash-lite"
+CORS_ORIGINS="http://localhost:3000,http://localhost:5173"
